Kubernetes/yml-templates/service-mesh/virtual-svc-delegate.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
    - "bookinfo.com"
  gateways:
    - mygateway
  http:
    - match:
      - uri:
          prefix: "/productpage"
      delegate:
          name: productpage
          namespace: nsA
    - match:
      - uri:
          prefix: "/reviews"
      delegate:
          name: reviews
          namespace: nsB
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: productpage
  namespace: nsA
spec:
  http:
    - match:
        - uri:
          prefix: "/productpage/v1/"
      route:
      - destination:
          host: productpage-v1.nsA.svc.cluster.local
    - route:
      - destination:
          host: productpage.nsA.svc.cluster.local
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: reviews
  namespace: nsB
spec:
  http:
    - route:
      - destination:
          host: reviews.nsB.svc.cluster.local
